Fixed spacing being slightly off

--- a/Frontend/src/app/shared/components/time-frame-picker/time-frame-picker.component.scss
+++ b/Frontend/src/app/shared/components/time-frame-picker/time-frame-picker.component.scss
@@ -30,7 +30,6 @@
 
 h4 {
     display: inline;
-    padding-left: 10px;
     padding-right: 10px;
 }
 
